--- a/assets/sass/global/global.scss
+++ b/assets/sass/global/global.scss
@@ -1,5 +1,9 @@
 @import "fonts";
+@import	"typography"; 
 @import "icons_custom";
 @import "animations";
+@import "panel";
 @import "header";
+@import "footer";
 @import "custom";
+@import "subpage";
