--- a/assets/sass/global/_fonts.scss
+++ b/assets/sass/global/_fonts.scss
@@ -1,31 +1,6 @@
-@import 'https://fonts.googleapis.com/css?family=Merriweather';
-@import 'https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700|PT+Sans:400,700,700i';
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700');
 
 $icomoon-font-path: "/styles/fonts/YSC-Icons" !default;
-
-@font-face {
-    font-family: 'Sugar Plums';
-    src: url('/styles/fonts/sugar_plums/sugar_plums.eot');
-    src: url('/styles/fonts/sugar_plums/sugar_plums.eot?#iefix') format('embedded-opentype'),
-         url('/styles/fonts/sugar_plums/sugar_plums.woff2') format('woff2'),
-         url('/styles/fonts/sugar_plums/sugar_plums.woff') format('woff'),
-         url('/styles/fonts/sugar_plums/sugar_plums.ttf') format('truetype'),
-         url('/styles/fonts/sugar_plums/sugar_plums.svg#SugarPlums') format('svg');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Sugar Plums';
-    src: url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.eot');
-    src: url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.eot?#iefix') format('embedded-opentype'),
-         url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.woff2') format('woff2'),
-         url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.woff') format('woff'),
-         url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.ttf') format('truetype'),
-         url('/styles/fonts/sugar_plums_italic/sugar_plums_italic.svg#SugarPlumsItalic') format('svg');
-    font-weight: 400;
-    font-style: italic;
-}
 
 @font-face {
   font-family: 'YSC-Icons';
@@ -38,3 +13,6 @@ $icomoon-font-path: "/styles/fonts/YSC-Icons" !default;
   font-style: normal;
 }
 
+.fa {
+    @extend .btl;
+}
