--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -114,8 +114,8 @@ $gray-lighter:              #eceeef !default;
 $gray-lightest:             #f7f7f9 !default;
 
 // Base Colors
-$brand-primary:             $color-secondary-2-3 !default;
-$brand-secondary:           $color-secondary-2-4 !default;
+$brand-primary:             $color-primary-3 !default;
+$brand-secondary:           $color-secondary-2-2 !default;
 $brand-tertiary:            $color-secondary-2-2 !default;
 
 // Alert Colors
