--- a/assets/sass/global/_custom.scss
+++ b/assets/sass/global/_custom.scss
@@ -839,7 +839,7 @@ hr.small {
 // Main Content Wrapper
 .main-cnt,
 .main-content {
-	margin-top: $navbar-height + 5px;
+	margin-top: 0;
 }
 
 // Content Wrapper
