--- a/assets/sass/global/_typography.scss
+++ b/assets/sass/global/_typography.scss
@@ -188,7 +188,7 @@ button[type="submit"] {
 .btn-social {
 	width: 50px;
     height: 50px;
-    border: 2px solid $brand-primary;
+    border: 2px solid $brand-secondary;
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
