--- a/assets/sass/global/_header.scss
+++ b/assets/sass/global/_header.scss
@@ -243,13 +243,6 @@ header {
 	@extend .btl;
 }
 
-.nav-menu-toggle {
-	@include multi-column(1,1,1,1);
-	@media (max-width: $screen-xxs-max) {
-		@include make-col(2);
-	}
-}
-
 /**
  * Nav Toggle
  */
@@ -389,11 +382,106 @@ header {
 	button[type="submit"] { float: right; }
 }
 
+/** Mobile Overlay **/
+.menu-overlay {
+	opacity: 0;
+	transition: opacity .3s linear;
+	height: 0;
+	.nav-toggle {
+		position: absolute;
+		top: 32px;
+		right: 15px;
+		float: none;
+		.one,
+		.two,
+		.three {
+			transition-duration: .3s;
+			margin: 5px auto;
+			background: #fff;
+			width: 25px;
+			height: 2px;
+		}
+	}
+}
+.menu-overlay.hidden {
+	display: none;
+	.main-menu-toggle {
+		display: none;
+	}
+}
+.menu-overlay.on {
+	display: block;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 99999;
+	background-color: rgba(0,0,0,.95);
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	opacity: 1;
+	transition: opacity .3s linear;
+	padding: 90px 0 15px;
+	overflow-y: scroll;
+	ul.mobile-nav {
+		font-size: 30px;
+		padding: 0;
+		list-style: none;
+		text-transform: uppercase;
+		li {
+			padding: 10px 0;
+			display: block;
+			border-bottom: 1px solid $brand-tertiary;
+			a {
+				display: block;
+				color: #fff;
+			}
+		}
+	}
+
+	@media (max-width: 1170px) {
+		ul.mobile-nav {
+			margin: 30px auto;
+			.is-parent {
+				ul li {
+					display: inline-block;
+					padding: 0 15px;
+					margin-bottom: 15px;
+					> a {
+						margin-top: 20px;
+						margin-bottom: 5px;
+						font-size: $font-size-h3;
+						border-bottom: 2px solid #fff;
+						font-size: 17px;
+						text-transform: uppercase;
+					}
+				}
+			} 
+			li ul {
+				margin: 0;
+				padding: 0;
+			}
+			li {
+				display: block;
+				a {
+					line-height: 1;
+					padding: 10px 15px;
+				}
+			}
+		}
+	}
+}
+
 .no-scroll {
 	position: fixed;
 	overflow: hidden;
 	width: 100%;
 }
+.overlay-active {
+	&.menu-overlay.on {
+		top: 109px;
+	}
+}
 .scroll {
-	transition: all .2s ease, transform .2s ease, background .1s ease, height .2s ease;
+	transition: all .3s ease, transform .2s ease, background .1s ease, height .2s ease;
 }
