--- a/assets/sass/global/_subpage.scss
+++ b/assets/sass/global/_subpage.scss
@@ -2,9 +2,7 @@
 	@extend %page-title;
 }
 .intro {
-	background-color: #f6f6f6;
 	@extend %base-pad;
-	color: $brand-tertiary;
 	.img-circle {
 		background-color: #f6f6f6;
 	}
@@ -20,4 +18,8 @@
 	.panel-body {
 		@extend %contrast-dark-text;
 	}
+}
+
+.about-section {
+	@extend %base-pad;
 }
