--- a/assets/sass/global/_typography.scss
+++ b/assets/sass/global/_typography.scss
@@ -115,6 +115,14 @@ ul.no-list-style {
 	font-weight: 600;
 	letter-spacing: 0.060em;
 	text-transform: uppercase;
+	transition: all .3s linear;
+	i { transition: all .3s linear; }
+	&:hover {
+		padding: rem(15px) rem(35px);
+		i {
+			padding-left: rem(15px);
+		}
+	}
 }
 
 button {
@@ -154,16 +162,6 @@ button[type="submit"] {
 		height: 50px;
 		width: 50px;
 		margin: 0 15px;
-		@media (max-width: 1170px) {
-			display: inline-block;
-			float: none;
-		}
-	}
-	@media (max-width: 1170px) {
-		margin: 0;
-		float: none;
-		text-align: center;
-		padding: 7px 0;
 	}
 	@media (max-width: $screen-sm-max) {
 		margin: 5px 0px;
@@ -171,7 +169,7 @@ button[type="submit"] {
 }
 
 .btn-outline {
-	background-color: $brand-primary;
+	background-color: $gray;
 	border: 0;
 	padding: 10px;
 	border-radius: 100%; 
@@ -180,7 +178,7 @@ button[type="submit"] {
 	&:active,
 	&:focus {
 		color: #fff;
-		background-color: $brand-tertiary;
+		background-color: $blue;
 		transition: all .3s cubic-bezier(.77, .06, .12, .98);
 	}
 }
@@ -188,16 +186,16 @@ button[type="submit"] {
 .btn-social {
 	width: 50px;
     height: 50px;
-    border: 2px solid $brand-secondary;
+    border: 2px solid $gray-lightest;
     border-radius: 100%;
     text-align: center;
-    font-size: 20px;
-    line-height: 45px;
-    color: #fff;
-    background-color: $gray-dark;
+    font-size: rem(18px);
+    line-height: 1.2;
+    color: $gray-lightest;
+    background-color: transparent;
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    @extend .bt-fw;
     &:hover {
-    	transform: scale(1.1);
-    	border: 2px solid $brand-secondary;
+    	border: 2px solid $blue;
     }
 }
