--- a/assets/sass/global/global.scss
+++ b/assets/sass/global/global.scss
@@ -1,6 +1,8 @@
 @import "fonts";
+@import "navbar";
+@import "input-groups";
 @import	"typography"; 
-@import "icons_custom";
+@import "icons-custom";
 @import "animations";
 @import "panel";
 @import "header";
