--- a/assets/sass/global/_fonts.scss
+++ b/assets/sass/global/_fonts.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
 $icomoon-font-path: "/styles/fonts/YSC-Icons" !default;
 
